# cyclop

./: readme.MD
nixOS/Systems/rpi-4/: configuration.nix  hardware-configuration.nix
src/: Dockerfile  QHYCameraNode.cpp  README.md  package.xml
